# ai-meter-firmware

.github/workflows/: build.yaml  build.yml
boards/: ai-meter-s3.h
code/: .gitignore  partitions_custom_16mb.csv  partitions_custom_4mb.csv  partitions_custom_8mb.csv  platformio.ini  sdkconfig.esp32cam.defaults  sdkconfig.esp32s3-aleksei  sdkconfig.esp32s3-eth-v2.defaults  sdkconfig.freenove-esp32s3.defaults  sdkconfig.wrover-kit-esp32.defaults
code/components/allexok_lan/: connect_lan.cpp
code/components/jomjol_controlGPIO/: CMakeLists.txt  server_GPIO.cpp  server_GPIO.h
code/components/jomjol_controlcamera/: CMakeLists.txt  ClassControllCamera.cpp  ClassControllCamera.h
code/components/jomjol_fileserver_ota/: CMakeLists.txt  server_file.cpp  server_file.h  server_help.cpp  server_help.h  server_ota.cpp  server_ota.h
code/components/jomjol_flowcontroll/: ClassFlow.cpp  ClassFlow.h  (+23 more)
code/include/: defines.h
code/main/: CMakeLists.txt  main.cpp  version.h
param-docs/: expert-params.txt  generate-template-param-doc-pages.py
sd-card/config/: config.ini
sd-card/demo/: config.ini
sd-card/html/: backup.html  common.js  data.html  data_export.html  edit_alignment.html  edit_analog.html  edit_config_raw.html  edit_config_template.html  edit_digits.html  edit_explain_7_abort.html  edit_reference.html  firework.js  graph.html  index.html  info.html  log.html  ota_page.html  overview.html  prevalue_set.html  readconfigcommon.js  readconfigparam.js  reboot_page.html  setup.html
tools/parameter-tooltip-generator/: generate-param-doc-tooltips.py
(+55 files in other folders)
